# active-vorticity

./: .merkle-snapshot.json  2026.7.10.0.32GUIT-TRT_Phase1_验证报告.md  2026.7.10.0.32GUIT-TRT_Phase1_验证报告v2.md  2026.7.10.0.32GUIT-TRT_Phase1_验证报告v3.md  2026.7.10.0.32降低显存提高运算量.md  2026.7.10.7.36自动脊线提取与热力学优化引擎.md  2026.7.10.8.34脑回路降维和清理记忆缓存.md  2026.7.10.8.45GUIT-TRT动力学相变理论转化为Agentic Coding.md  2026.7.10.8.52自循环(OODA)优化机制loop.md  2026.7.10.9.05大模型自优化循环机制（LOOP） 与 Ornith 专属 GUIT 工程化套件结合.md  2026.7.10_GUIT-TRT_v9.0_非平衡态活性涡流版.md  2026.7.9.10.37刚性和柔性知识区分.md  2026.7.9.15.59TRT如何用三大几何性质算出精细结构常数α.md  2026.7.9.16.12空间右手圆柱螺旋状光速运动的分形填充与精细结构常数的拓扑起源.md  2026.7.9.16.13理论聚合.md  2026.7.9.16.15语义几何的拓扑必然GUIT-TRT 大一统信息论（第五次重构 · 融合版）.md  2026.7.9.16.21GUIT-TRT 理论可解释现象、可证伪预言与验证方案.md  2026.7.9.19.23信息化为世界模型几何模型.md  2026.7.9.20.46数学框架重构.md  2026.7.9.21.13GUIT-TRT v8.0：非平衡态活性动力学版本.md  2026.7.9.21.50GUIT-TRT_v8.0_实验校准版.md  2026.7.9.22.45v10.0_真实LLM验证总结.md  2026.7.9.23.09理论建议.md  2026.7.9.23.44秩=12证伪.md  2026.7.9.8.00约束条件下的破缺寻求对称行为.md  2026.7.9.8.40 对称、破缺与约束场草稿1.md  2026.7.9.8.40 对称、破缺与约束场草稿2.md  2026.7.9.8.40 对称、破缺与约束场：大语言模型底层数学的规范场论重构.md  2026.7.9.8.49最小可行实验：因果规范场理论在微型叙事世界中的验证.md  2026.710.10.0_GUIT-TRT_Phase1_验证报告v6.md  2026.710.9.10大语言模型隐空间的非平衡态热力学活性涡流论文.md  20267.10.9.31信息论总纲和loop和热力学工程.md  CLAUDE.md  GUIT_刚柔分层重构报告.md  README.md  _analyze_cv.py  _analyze_cv_stdout.txt  _exp10_stdout.txt  _exp10b_perstory_stdout.txt  _exp10b_stdout.txt  (+36 more)
Ornith-GUIT-Suite/: README.md  comparison_report.md  complete_report.md  pyproject.toml  real_ab_report.md
llm-thermodynamics/: README.md  pyproject.toml
(+202 files in other folders)
