[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ornith-guit-suite"
version = "1.0.0"
description = "Ornith-1.0-9B dedicated GUIT-TRT engineering toolkit: affine ridge compression, phase-transition hallucination guard, and causal KV cache eviction for Agentic Coding."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
hf = ["transformers>=4.35"]
dev = ["pytest>=7.0", "transformers>=4.35"]

[tool.setuptools.packages.find]
include = ["ornith_guit*"]
