[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-thermodynamics"
version = "0.3.0"
description = "Non-equilibrium thermodynamics of LLM latent spaces: hallucination detection, NESS evaluation, sub-Riemannian geometry, RMT vorticity, KV cache compression, and causal manifold steering"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
hf = ["transformers>=4.35"]
dev = ["pytest>=7.0", "transformers>=4.35"]

[tool.setuptools.packages.find]
include = ["llm_thermo*"]